-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 2.2.0
-
Win 7 (64)
CDB - MSVC 9.0
Qt 4.7.2 (binary package)
-
28d5526459f78602b3054bb2f31845e17ff37da8
The local & watchers view is apparently out of sync (or simply inconsistent maybe) in function testQList of the simple debugger test project.
Sometimes it doesn't display all the objects in scope and for some of them the number of contained items is incorrect. For instance, in the sequence of appends for li I don't see any change in the locals view.