Debugger[CDB]: Fix handling of shadowed variables.

Fix name formatting and algorithm to find uninitialized
variables to use reverse order in case locals of the same
name occur in a scope.

Reviewed-by: hjk
Task-number: QTCREATORBUG-4475